# music-shop-td

./: .gitignore  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/musicshop/: manage.py
backend/musicshop/main/: admin.py  authentication.py  models.py  serializers.py  views.py
backend/musicshop/main/migrations/: 0001_initial.py  0002_order_pickuppoint_rename_imgref_product_img_ref_and_more.py  0003_user_order_pickup_point_alter_order_cost_and_more.py  0004_remove_order_timestamp_order_created_at_and_more.py  0005_remove_order_user.py  0006_cart_cartitem.py  0007_remove_order_cost_alter_cart_user_and_more.py  0008_order_user.py  0009_order_cost.py  0010_category_alter_cart_options_alter_order_options_and_more.py  0011_manufacturer_alter_category_options_and_more.py  0012_alter_category_name_alter_manufacturer_name_and_more.py  0013_user_firstname_user_login_user_patronymic_and_more.py
backend/musicshop/musicshop/: asgi.py  settings.py  urls.py  wsgi.py
docs/: openapi.yaml
frontend/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.jsx
frontend/src/api/: AuthApi.ts  CartItemsApi.ts  CategoriesApi.ts  ManufacturersApi.ts  OrdersApi.ts  PickupPointsApi.ts  ProductsApi.ts  UsersApi.ts  index.ts
frontend/src/dto/: AuthResponse.ts  CartItemResponse .ts  CategoryResponse.ts  ManufacturerResponse.ts  OrderResponse.ts  PickupPoint.ts  ProductPageResponse.ts  ProductResponse.ts  (+2 more)
(+54 files in other folders)
